      the life of most LTS server distributions, while eliminating the need to
      troubleshoot warnings and bugs that only show up in increasingly-ancient
      versions of Perl.

      For this release, it means that the minimum supported Perl is 5.18, which
      was first released on 2013-05-18.

    - Add support for cross-reference streams using 64-bit field widths.

    - [RT #126274] Fix alignment when using UniFont with text_center or
      text_right when all characters are in the same block.

    - [RT #121911] Fix adding pages to a document structure with nested Pages
      elements.  This included a fairly substantial rewrite of the relevant
      code, so please report any new bugs related to adding pages (report and
      troubleshooting by Vadim Repin).


2.033     2017-07-06

    - [RT #122371] Remove a couple of improperly-placed weaken statements
      (reported by Phil Perry).

    - [RT #122372] Fix weakening when a page is added to the end of a multiple
      page document (reported by Phil Perry).

    - Fix Bank Gothic core font (reported by Phil Perry).


2.032     2017-07-02

    - PDF::API2 has many circular references, and the end() method doesn't clear
      them all, so memory is leaked.  This release uses Scalar::Util's weaken()
      function to improve garbage collection.  A significant number of circular
      references have been weakened, though many likely still remain.

    - [RT #120756] Eliminate a warning for an ambiguous call to CORE::open
      (first reported by Abdelbaki Brahmia).

    - $text->text_justified() and $text->text_fill_justified() now adjust the
      space between words rather than stretching individual characters in order
      to get the text to fit.

    - [RT #120397] Indirect references and indirect objects can have comments
      embedded in their whitespace, and their object number and generation may
      be split across multiple lines, which may not all be buffered (reported by
      SPROUT).
