@@ -13,12 +13,9 @@ my $page = $pdf->page();
 my $annotation = $page->annotation();
 $annotation->text('This is an annotation', -rect => [ 72, 144, 172, 244 ]);
 
-# Note: Annotation currently uses UTF-8 whenever possible, which is
-# why the Contents section doesn't just have the simple text.  I think
-# it would be better to only use UTF-8 when necessary.
 my $string = $pdf->stringify();
 like($string,
-     qr{/Annot /Subtype /Text /Border \[ 0 0 0 \] /Contents <FEFF005400680069007300200069007300200061006E00200061006E006E006F0074006100740069006F006E> /Rect \[ 72 144 172 244 \]},
+     qr{/Annot /Subtype /Text /Border \[ 0 0 0 \] /Contents \(This is an annotation\) /Rect \[ 72 144 172 244 \]},
      q{Text Annotation in a rectangle});
 
 # [RT #118352] Crash if $page->annotation is called on a page with an
@@ -42,5 +39,5 @@ $annotation->text('This is an annotation', -rect => [ 72, 144, 172, 244 ]);
 
 $string = $pdf->stringify();
 like($string,
-     qr{/Annot /Subtype /Text /Border \[ 0 0 0 \] /Contents <FEFF005400680069007300200069007300200061006E00200061006E006E006F0074006100740069006F006E> /Rect \[ 72 144 172 244 \]},
+     qr{/Annot /Subtype /Text /Border \[ 0 0 0 \] /Contents \(This is an annotation\) /Rect \[ 72 144 172 244 \]},
      q{Add an annotation to an existing annotations array stored in an indirect object});
